# strophe

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/hocket-engine/: Cargo.toml
crates/hocket-engine/src/: click.rs  export.rs  handoff.rs  lib.rs  media.rs  project_store.rs  waveform.rs
crates/hocket-genet/: Cargo.toml
crates/hocket-genet/src/: identity.rs  main.rs  project_io.rs  state.rs  theme.rs  view.rs
crates/hocket-headless/: Cargo.toml
crates/hocket-headless/src/: main.rs
crates/hocket-model/: Cargo.toml
crates/hocket-model/src/: history.rs  lib.rs  session.rs  track.rs
crates/strophe/: Cargo.toml
crates/strophe-engine/: Cargo.toml
crates/strophe-engine/src/: capture.rs  click.rs  lib.rs  media.rs  project_store.rs
crates/strophe-engine/tests/: capture_pipeline.rs
crates/strophe-genet/: Cargo.toml
crates/strophe-genet/src/: leaves.rs  main.rs  state.rs  view.rs
crates/strophe-headless/: Cargo.toml
crates/strophe-headless/src/: main.rs
crates/strophe-model/: Cargo.toml
crates/strophe-model/src/: history.rs  ids.rs  lib.rs  persistence.rs  phrase.rs  session.rs  track.rs
crates/strophe-model/tests/: validation.rs
crates/strophe-serval/: Cargo.toml
crates/strophe-serval/src/: leaves.rs  main.rs  project_io.rs  state.rs  theme.rs  view.rs
crates/strophe-widgets/: Cargo.toml
crates/strophe-widgets/src/: lib.rs
crates/strophe/src/: main.rs
crates/strophe/src/view/: transport.rs
design_docs/: 2026-05-18_initial_plan.md  2026-07-08_genet_host_refactor_plan.md  2026-07-08_serval_host_refactor_plan.md  2026-07-09_audio-device-selection_plan.md  2026-07-09_free-loop-export-duration_plan.md  2026-07-09_honest-local-session_plan.md  2026-07-09_loop-export_plan.md  2026-07-09_muniment-project-store_plan.md  2026-07-09_project-controls_plan.md  2026-07-10_history-branches_plan.md  2026-07-10_signed-handoff-envelope_plan.md  2026-07-11_real_waveforms_meter_ballistics_plan.md  2026-07-14_open-project-format_plan.md  2026-07-18_handoff-ui_plan.md  DOC_POLICY.md  DOC_README.md  PROJECT_DESCRIPTION.md
design_docs/archive_docs/2026-07-15/: 2026-07-15_wavpack_codec_plan.md
