[workspace]
resolver = "2"
members = [
    "crates/strophe-engine",
    "crates/strophe-model",
    "crates/strophe-headless",
    # The serval-host UI (2026-07-08 refactor). At the parity cut the Masonry
    # `strophe` bin + `strophe-widgets` were deleted; this is the only UI now.
    "crates/strophe-serval",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Mark <sgt.mark3@gmail.com>"]
repository = "https://github.com/mark-ik/strophe"
rust-version = "1.92"

[workspace.dependencies]
# Internal crates. The `strophe` (app) and `strophe-headless` (audio
# test harness) binaries are workspace members but not dependency
# targets, so they don't appear here.
strophe-engine = { path = "crates/strophe-engine", version = "0.1.0" }
strophe-model = { path = "crates/strophe-model", version = "0.1.0" }

# Shared pure-DSP primitives — the `audio-primitives` extraction (click
# synth, streaming onset/tempo, latency estimation). Lives in the
# woodshed repo (seeded from its mature DSP); consumed cross-repo by
# path-dep. strophe-engine's click loop calls the shared click synth;
# the onset/tempo + latency cores are here for FT3c (calibration) and
# bar-alignment work. Pure std, no engine/UI coupling.
audio-primitives = { path = "../woodshed/crates/audio-primitives", version = "0.1.0" }

# Firewheel: modular audio graph engine, the spine of strophe-engine
# (FT3b-prime). cpal feature enables the default native backend; the
# symphonium feature gives sample-loading helpers we'll want at FT8.
firewheel = { version = "0.10", features = [
    "cpal",
    "symphonium",
    "peak_meter_node",
    "stream_nodes",
] }

# Woodshed-audio is no longer a Strophe dependency as of FT3b-prime —
# the SequencerEngine wrap retired in favor of the Firewheel graph.
# Strophe is now the *pressure vessel* for the reusable audio layer;
# the relationship to Woodshed is via future shared crates
# (audio-primitives, audio-widgets, audio-devices), not direct
# coupling. See memory/project_strophe_audio_pressure_vessel.md.

winit = "0.30"

# UI — serval host (2026-07-08 serval-host refactor). The new UI stack;
# mirrors woodshed's serval section. GIT deps on the owned repos; local
# checkouts ride the gitignored .cargo/config.toml source-specific [patch].
# Build strophe-serval from the strophe cwd so that patch applies.
xilem-serval = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
chisel = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
layout-dom-api = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
serval-scripted-dom = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
serval-layout = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
serval-winit-host = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
netrender = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
paint_list_api = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
paint_list_render = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
# Host-side surface/compose types only; backend features come from
# netrender's per-target split. Single wgpu 29 tree now the Masonry app
# (wgpu 28) is retired.
wgpu = { version = "29", default-features = false, features = ["std"] }
# Pure OKLCH seed-to-palette theming (shared; woodshed's too).
tinct = { git = "https://github.com/mark-ik/tinct", branch = "main" }

# Audio I/O + DSP
cpal = "0.15"
hound = "3.5"

# Realtime-safe primitives
rtrb = "0.3"
basedrop = "0.1"

# Persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["alloc"] }

# Identifiers
uuid = { version = "1.10", features = ["v4", "serde"] }

# Content hashing for media (engine-side only — model just stores bytes)
blake3 = "1.5"

# Async runtime (UI side; never on the audio thread)
tokio = { version = "1.50", features = ["rt", "rt-multi-thread", "time", "sync"] }

# Mirror of serval's [patch.crates-io] entries this workspace's serval graph
# needs (patches are per-workspace-root, not inherited through git deps —
# woodshed carries the same mirror). Keep in sync with serval's fork pins.
[patch.crates-io]
# stylo_taffy names crates.io stylo/stylo_atoms ^0.18; serval pins the same
# crates from the mark-ik/stylo fork (mark-ik/servo-media-features branch),
# and stylo declares links = "servo_style_crate" (one Stylo per graph), so
# mirror serval's patch to unify.
stylo = { git = "https://github.com/mark-ik/stylo", branch = "mark-ik/servo-media-features" }
stylo_atoms = { git = "https://github.com/mark-ik/stylo", branch = "mark-ik/servo-media-features" }
# serval's vendored forks (taffy float-layout, in-process ipc-channel).
taffy = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
ipc-channel = { git = "https://github.com/mark-ik/serval.git", branch = "main" }
