[workspace]
resolver = "2"
members = [
    "crates/strophe-engine",
    "crates/strophe-model",
    "crates/strophe-headless",
    # The genet-host UI (2026-07-08 refactor). At the parity cut the Masonry
    # `strophe` bin + `strophe-widgets` were deleted; this is the only UI now.
    "crates/strophe-genet",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Mark <sgt.mark3@gmail.com>"]
repository = "https://github.com/mark-ik/strophe"
rust-version = "1.92"

[workspace.dependencies]
# AccessKit tree/action types for the genet host's a11y bridge (must track
# genet's accesskit pin so `TreeUpdate` unifies across genet-winit-host).
accesskit = "0.24"
# Internal crates. The `strophe` (app) and `strophe-headless` (audio
# test harness) binaries are workspace members but not dependency
# targets, so they don't appear here.
strophe-engine = { path = "crates/strophe-engine", version = "0.1.0" }
strophe-model = { path = "crates/strophe-model", version = "0.1.0" }

# Shared pure-DSP primitives — the `audio-primitives` extraction (click
# synth, streaming onset/tempo, latency estimation). Lives in the
# woodshed repo (seeded from its mature DSP); consumed cross-repo by
# path-dep. strophe-engine's click loop calls the shared click synth;
# the onset/tempo + latency cores are here for FT3c (calibration) and
# bar-alignment work. Pure std, no engine/UI coupling.
audio-primitives = { path = "../woodshed/crates/audio-primitives", version = "0.1.0" }

# Portable durable-byte seam shared with Woodshed and Isometry. Strophe keeps
# its own model and MediaRef identity; muniment owns backend mechanics.
muniment = { path = "../muniment", version = "0.1.0", default-features = false }
armillary = { path = "../armillary", version = "0.1.0" }
# Identity root for signed, recipient-bound hand-off envelopes. This is a
# host-agnostic protocol dependency, not project/session state.
personae = { path = "../personae", version = "0.1.0" }

# Firewheel: modular audio graph engine, the spine of strophe-engine
# (FT3b-prime). cpal feature enables the default native backend; the
# symphonium feature gives sample-loading helpers we'll want at FT8.
firewheel = { version = "0.10", features = [
    "cpal",
    "symphonium",
    "peak_meter_node",
    "stream_nodes",
] }

# Woodshed-audio is no longer a Strophe dependency as of FT3b-prime —
# the SequencerEngine wrap retired in favor of the Firewheel graph.
# Strophe is now the *pressure vessel* for the reusable audio layer;
# the relationship to Woodshed is via future shared crates
# (audio-primitives, audio-widgets, audio-devices), not direct
# coupling. See memory/project_strophe_audio_pressure_vessel.md.

winit = "0.30"

# UI — genet host (2026-07-08 genet-host refactor). The new UI stack;
# mirrors woodshed's genet section. GIT deps on the owned repos; local
# checkouts ride the gitignored .cargo/config.toml source-specific [patch].
# Build strophe-genet from the strophe cwd so that patch applies.
xilem-serval = { package = "serval-xilem", git = "https://github.com/mark-ik/genet.git", branch = "main" }
chisel = { package = "serval-chisel", git = "https://github.com/mark-ik/genet.git", branch = "main" }
layout-dom-api = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
genet-scripted-dom = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
genet-layout = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
genet-winit-host = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
netrender = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
paint_list_api = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
paint_list_render = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
# Host-side surface/compose types only; backend features come from
# netrender's per-target split. Single wgpu 29 tree now the Masonry app
# (wgpu 28) is retired.
wgpu = { version = "29", default-features = false, features = ["std"] }
# Pure OKLCH seed-to-palette theming (shared; woodshed's too).
tinct = { git = "https://github.com/mark-ik/tinct", branch = "main" }

# Audio I/O + DSP
cpal = "0.15"
hound = "3.5"

# Realtime-safe primitives
rtrb = "0.3"
basedrop = "0.1"

# Persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1", features = ["alloc"] }

# Identifiers
uuid = { version = "1.10", features = ["v4", "serde"] }

# Content hashing for media (engine-side only — model just stores bytes)
blake3 = "1.5"

# Async runtime (UI side; never on the audio thread)
tokio = { version = "1.50", features = ["rt", "rt-multi-thread", "time", "sync"] }

# Mirror of genet's [patch.crates-io] entries this workspace's genet graph
# needs (patches are per-workspace-root, not inherited through git deps —
# woodshed carries the same mirror). Keep in sync with genet's fork pins.
[patch.crates-io]
# NO stylo/stylo_atoms patch (removed 2026-07-12, mirroring genet): the fork
# is now the RENAMED `genet-stylo` family, and a `[patch]` cannot rename its
# target. Genet's crates git-dep genet-stylo by package rename instead, so no
# crates.io `stylo` remains in the graph to patch. Keeping the old patch
# reintroduced the pre-rename fork beside genet-stylo, and
# `links = "servo_style_crate"` (one Stylo per graph) made that a hard error.
#
# stylo_taffy MUST be patched for the same reason: the registry copy names
# crates.io stylo, which would pull a second Stylo into the graph. Genet
# vendors a stylo_taffy that git-deps genet-stylo instead; redirect to it.
# See genet's docs/2026-07-12_ring3_fork_rename_publish_plan.md.
stylo_taffy = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
# genet's vendored forks (taffy float-layout, in-process ipc-channel).
taffy = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
ipc-channel = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
