[workspace]
resolver = "3"
members = [
    "crates/hocket-engine",
    "crates/hocket-model",
    "crates/hocket-headless",
    # The genet-host UI (2026-07-08 refactor). At the parity cut the Masonry
    # `hocket` bin + `hocket-widgets` were deleted; this is the only UI now.
    "crates/hocket-genet",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Mark <sgt.mark3@gmail.com>"]
repository = "https://github.com/mark-ik/hocket"
rust-version = "1.96"

[workspace.dependencies]
# AccessKit tree/action types for the genet host's a11y bridge (must track
# genet's accesskit pin so `TreeUpdate` unifies across genet-winit-host).
accesskit = "0.24"
# Internal crates. The `hocket` (app) and `hocket-headless` (audio
# test harness) binaries are workspace members but not dependency
# targets, so they don't appear here.
hocket-engine = { path = "crates/hocket-engine", version = "0.1.0" }
hocket-model = { path = "crates/hocket-model", version = "0.1.0" }

# Shared pure-DSP primitives — the `audio-primitives` extraction (click
# synth, streaming onset/tempo, latency estimation). Lives in the
# woodshed repo (seeded from its mature DSP); consumed cross-repo by
# path-dep. hocket-engine's click loop calls the shared click synth;
# the onset/tempo + latency cores are here for FT3c (calibration) and
# bar-alignment work. Pure std, no engine/UI coupling.
audio-primitives = { git = "https://github.com/mark-ik/woodshed.git", branch = "main", version = "0.1.0" }

# Portable durable-byte seam shared with Woodshed and Isometry. Hocket keeps
# its own model and MediaRef identity; muniment owns backend mechanics.
muniment = { git = "https://github.com/mark-ik/mere.git", branch = "main", version = "0.1.0", default-features = false }
armillary = { git = "https://github.com/mark-ik/mere.git", branch = "main", version = "0.1.0" }
# Identity root for signed, recipient-bound hand-off envelopes. This is a
# host-agnostic protocol dependency, not project/session state.
personae = { git = "https://github.com/mark-ik/mere.git", branch = "main", version = "0.1.0" }
# Pure-Rust WavPack codec (repos/wavicle). Stores .hock media as lossless,
# importable, wasm-capable .wv instead of WAV. `encode` is on because Hocket
# both writes and reads media; MediaRef identity stays Hocket's BLAKE3 over the
# decoded f32 samples, unchanged by the codec swap.
wavicle = { git = "https://github.com/mark-ik/wavicle.git", branch = "main", version = "0.1.0", features = ["encode"] }

# Firewheel: modular audio graph engine, the spine of hocket-engine
# (FT3b-prime). cpal feature enables the default native backend; the
# symphonium feature gives sample-loading helpers we'll want at FT8.
firewheel = { version = "0.10", features = [
    "cpal",
    "symphonium",
    "peak_meter_node",
    "stream_nodes",
] }

# Woodshed-audio is no longer a Hocket dependency as of FT3b-prime —
# the SequencerEngine wrap retired in favor of the Firewheel graph.
# Hocket is now the *pressure vessel* for the reusable audio layer;
# the relationship to Woodshed is via future shared crates
# (audio-primitives, audio-widgets, audio-devices), not direct
# coupling. See memory/project_hocket_audio_pressure_vessel.md.

winit = "0.30"

# UI — Genet host (2026-07-08 genet-host refactor). The new UI stack;
# mirrors Woodshed's Genet section. Git deps on the owned repos; local
# checkouts ride the gitignored .cargo/config.toml source-specific [patch].
# Build hocket-genet from the hocket cwd so that patch applies.
cambium = "0.2.0"
sprigging = "0.1.0"
layout-dom-api = { git = "https://github.com/mark-ik/genet.git", branch = "main", version = "=0.1.0" }
genet-scripted-dom = { git = "https://github.com/mark-ik/genet.git", branch = "main", version = "=0.1.0" }
genet-layout = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
genet-winit-host = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
genet-clipboard = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
genet-probe = { git = "https://github.com/mark-ik/genet.git", branch = "main" }
image = { version = "0.25", default-features = false, features = ["png"] }
netrender = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
paint_list_api = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
paint_list_render = { git = "https://github.com/mark-ik/netrender.git", branch = "main" }
# Host-side surface/compose types only; backend features come from
# netrender's per-target split. Single wgpu 29 tree now the Masonry app
# (wgpu 28) is retired.
wgpu = { version = "29", default-features = false, features = ["std"] }
# Pure OKLCH seed-to-palette theming (shared; woodshed's too). A genet
# component; the standalone mirror repo retires with the 2026-07-23
# consolidation.
tinct = { git = "https://github.com/mark-ik/genet.git", branch = "main" }

# Audio I/O + DSP
cpal = "0.15"
hound = "3.5"

# Realtime-safe primitives
rtrb = "0.3"
basedrop = "0.1"

# Persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CBOR (RFC 8949) for the durable project manifest and the hand-off envelope.
# Self-describing and cross-language, and the serialization Moothold uses, so
# saved bytes and handed-off bytes are the same format. Replaced postcard at
# the FT8 serialization migration (2026-07-14).
ciborium = "0.2"

# Identifiers
uuid = { version = "1.10", features = ["v4", "serde"] }

# Content hashing for media (engine-side only — model just stores bytes)
blake3 = "1.5"

# Async runtime (UI side; never on the audio thread)
tokio = { version = "1.50", features = ["rt", "rt-multi-thread", "time", "sync"] }

# Mirror of genet's [patch.crates-io] entries this workspace's genet graph
# needs (patches are per-workspace-root, not inherited through git deps —
# woodshed carries the same mirror). Keep in sync with genet's fork pins.
[patch.crates-io]
layout-dom-api = { git = "https://github.com/mark-ik/genet.git", branch = "main", version = "=0.1.0" }
genet-scripted-dom = { git = "https://github.com/mark-ik/genet.git", branch = "main", version = "=0.1.0" }
# NO stylo/stylo_atoms patch (removed 2026-07-12, mirroring genet): the fork
# is now the RENAMED `genet-stylo` family, and a `[patch]` cannot rename its
# target. Genet's crates git-dep genet-stylo by package rename instead, so no
# crates.io `stylo` remains in the graph to patch. Keeping the old patch
# reintroduced the pre-rename fork beside genet-stylo, and
# `links = "servo_style_crate"` (one Stylo per graph) made that a hard error.
#
# stylo_taffy MUST be patched for the same reason: the registry copy names
# crates.io stylo, which would pull a second Stylo into the graph. The sibling
# paths keep Cargo from treating Genet's large workspace as a crates.io patch
# source, while its vendored adapter consumes the published genet-stylo family.
stylo_taffy = { path = "../genet/support/patches/stylo_taffy" }
# genet's vendored forks (taffy float-layout, in-process ipc-channel).
taffy = { path = "../genet/support/patches/taffy" }
ipc-channel = { path = "../genet/support/patches/ipc-channel" }
