[package]
name = "hocket-genet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hocket's genet desktop host: winit window + netrender present over the genet view layer. Genet-host refactor S0+."

[dependencies]
# AccessKit tree/action types for the a11y bridge (genet_winit_host::AccessKitBridge).
accesskit = { workspace = true }
hocket-model = { workspace = true }
hocket-engine = { workspace = true }
audio-primitives = { workspace = true }
cambium = { workspace = true }
sprigging = { workspace = true }
layout-dom-api = { workspace = true }
genet-scripted-dom = { workspace = true }
genet-layout = { workspace = true }
genet-winit-host = { workspace = true }
netrender = { workspace = true }
paint_list_api = { workspace = true }
paint_list_render = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
muniment = { workspace = true, features = ["redb"] }
armillary = { workspace = true }
personae = { workspace = true }
# Opaque round-trip of the sealed identity record when re-sealing it under the
# post-rename record name (see identity.rs).
serde_json = { workspace = true }
pollster = "0.4"
rfd = "0.17.2"

[dev-dependencies]
tempfile = "3"
