[package]
name = "strophe-serval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Strophe's serval desktop host: winit window + netrender present over the serval view layer. Serval-host refactor S0+."

[dependencies]
strophe-model = { workspace = true }
xilem-serval = { workspace = true }
chisel = { workspace = true }
layout-dom-api = { workspace = true }
serval-scripted-dom = { workspace = true }
serval-layout = { workspace = true }
serval-winit-host = { workspace = true }
netrender = { workspace = true }
paint_list_api = { workspace = true }
paint_list_render = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
