[package]
name = "strophe-genet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Strophe's genet desktop host: winit window + netrender present over the genet view layer. Genet-host refactor S0+."

[dependencies]
# AccessKit tree/action types for the a11y bridge (genet_winit_host::AccessKitBridge).
accesskit = { workspace = true }
strophe-model = { workspace = true }
strophe-engine = { workspace = true }
audio-primitives = { workspace = true }
xilem-serval = { workspace = true }
chisel = { workspace = true }
layout-dom-api = { workspace = true }
genet-scripted-dom = { workspace = true }
genet-layout = { workspace = true }
genet-winit-host = { workspace = true }
netrender = { workspace = true }
paint_list_api = { workspace = true }
paint_list_render = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
muniment = { workspace = true, features = ["redb"] }
armillary = { workspace = true }
personae = { workspace = true }
pollster = "0.4"
rfd = "0.17.2"

[dev-dependencies]
tempfile = "3"
